--- a/frontend/web/layouts/slidbar1.html
+++ b/frontend/web/layouts/slidbar1.html
@@ -1,3 +1,5 @@
+<section id="slidbar1">
+
 <div class="col-lg-2 slidbar" style="">
     <h3>CATEGORIES</h3>
     <img class="img-responsive" src="images/line2.png"/>
@@ -52,3 +54,5 @@
     </div>
 
 </div>
+
+    </section>
