--- a/frontend/web/layouts/footer.html
+++ b/frontend/web/layouts/footer.html
@@ -1,3 +1,5 @@
+<section id="footer">
+
 <div class="row col-lg-12 "id="footer"  >
     <div class="col-lg-9 col-lg-offset-1">
         <div class="col-lg-3 ">
@@ -63,3 +65,4 @@
 <div id="blakline" class="col-lg-12">
     <img class="img-responsive col-lg-2 col-lg-offset-1" src="images/foter_logo.png"/>
 </div>
+</section>
