--- a/frontend/web/layouts/slidbar2.html
+++ b/frontend/web/layouts/slidbar2.html
@@ -1,3 +1,5 @@
+<section id="slidbar2">
+
 <div class="col-lg-2 slidbar" style="">
     <h3>CATEGORIES</h3>
     <img class="img-responsive" src="images/line2.png"/>
@@ -39,3 +41,4 @@
     </div>
 
 </div>
+    </section>
