--- a/frontend/web/layouts/footer.html
+++ b/frontend/web/layouts/footer.html
@@ -1,4 +1,4 @@
-<section id="footer">
+<section id="foote">
 
 <div class="row col-lg-12 "id="footer"  >
     <div class="col-lg-9 col-lg-offset-1">
